--- a/src/guide/computer/コンピュータ1.md
+++ b/src/guide/computer/コンピュータ1.md
@@ -2,6 +2,8 @@
 layout: layouts/post.njk
 ---
 
+このように，既知の部分をブラックボックス化して，それをコンポーネントとして新しいものを理解していく姿勢は，
+$y=(x^2-2x)^2+4(x^2-x)-1$の$(x^2-2x)$を$t=f(x)=(x^2-2x)$で置き換えて，$y=g(t)=t^2+4t-1$として，$y=g(f(x))$($y=g \circ f(x)$)と捉えることと本質的には同じこと．
 
 ## インターフェース
 
