--- a/src/guide/statistics/統計2H.md
+++ b/src/guide/statistics/統計2H.md
@@ -2,6 +2,220 @@
 layout: layouts/post.njk
 ---
 
+仮説検定
+
+## 例題
+
+コインを8回投げて8回オモテが出た．このコインは公平なコインだろうか？
+
+仮説検定的にこの問いに答えるのなら次のようになる．
+
+もしこれが公平なコインだと仮定する．つまり，オモテが出る確率pは1/2と考える．
+この場合，オモテがk回出る確率は次のようになる．
+8回中8回オモテがでる確率は　と低い．よって，公平なコインとは考えられない．つまり，p≠1/2である．
+
+全体としては，一行目でp=1/2を仮定し，最終的にもしp=1/2とすれば，8回中8回オモテの確率は低すぎるので，p=1/2ではない．と結論づける背理法の流れになっている．途中の論理は置いておいて，なぜ背理法を使うのか，もっと直接的に公平でないコインであることを示すことはできないのか，という問題を考えてみよう．
+
+背理法を使う一番大きな理由は，直接的にpがある値であることを示すことは難しいことにある．例えば8回中8回オモテがでたのだから，オモテが出る確率は100%(p=1)なのではないかと予想したとしよう．この予想については次のように反論できる．
+
+「確かにp=1が8回中8回オモテがでるだろう．しかし，p=0.999でも8回中8回オモテになるだろうし，p=0.9であっても8回中8回オモテになることもあるだろう．実際p=0.9のとき8回中8回オモテになるのは，0.9^8=0.43なので，2回に1回くらいはすべてオモテになる．だからp=1だけではなく，p=0.1~0.90くらいまではありうるだろう．」
+
+もっと一般には，コイン投げの結果からp=p1と合理的に予想できる場合，本当の確率がp1に近い範囲p1±Δにあっても，その結果になることがありえるということだ．
+
+このように反論されるなら，逆にどのpならその結果になりえないかを考えるのが筋が良いことが分かる．例えばp=0なら，8回投げて8回オモテは絶対にありえない．p=0.01でも全部オモテになる確率は，0.00000001%だからまずないだろう，など．これはすでに背理法の思考になっている．つまり，形式的に整理すれば
+
+p=0.01と仮定する．このとき8回オモテの確率0.00000001%である．これは十分に小さいので，仮定は誤りでp=0.01ではないと考えられる，
+
+ということになる．最初の回答はこれをp=1/2にしたバージョンである．このように，p=p1という主張は肯定的には示すことは難しいが，否定的には簡単に示すことができるのだ．
+
+では，十分小さいというのはどれくらいの確率なのか．これは恣意的に今は5%としておこう．つまり，p=1/2が正しいなら5%以下でしか起きないような出来事が起こったとき，p=1/2を否定することにする．この基準を採用すれば，例えば，コインを4回投げて4回表だった場合には，確率1/16=0.625%で起きることなので，p=1/2は否定できない．コインを5回投げて5回表だった場合には，確率1/32=0.3%で起きることなので，p=1/2は否定できる．
+
+注意すべき点がある．それは、コインを1000回投げて500回表だった場合を考えると分かる．この確率は計算すると，約2.5%になる．ということは5%以下でしか起きないことなので，500回オモテのときは，p=1/2を否定すべきなのか？しかし直観的には、半分がオモテなのだからp=1/2を否定するのはおかしい感じがする．この直観は正しい．このようなことが起きる理由は、コインを投げる回数が増えれば特定の回数がオモテになる確率はどんどん減っていくことにある．
+
+だからp=1/2を否定するのは，5%以下でしか起きないような**極端な**出来事が起こったとき，とすべきだ．例えばコインを10回投げた場合でもう一度考えよう．コインを投げたときにオモテがk回出る確率の分布は次のようになる．
+
+この分布から，p=1/2が正しければ，もっともオモテが出やすいのは5回でオモテが2~8回に収まる確率は90%だと分かる．逆にオモテが0-1,9-10回出る，つまり極端な確率は　であることがわかる．ということは，オモテが0,1,9,10回出るのが5%しかでない極端な場合であり，例えばオモテが8回出る確率はそれ単独では，1/256で5%以下だが，極端な話とはみなされないことになる．
+
+以上の話は5%を別の確率αに変えても全く同じで，この確率を高くすればp=1/2は否定されやすくなるし，低くすればp=1/2は否定されにくくなることがわかるだろう．
+
+## 反論B
+
+この考えについて反論Bが考えられる．
+
+「p=1/2が正しい場合に確率5%でしか起きないことは確かに起こりづらい極端な場合だろう．しかし，全く起きないわけではない．本当はp=1/2のコインなのに，たまたま10回連続でオモテになることもあるだろう．それだけでp=1/2を否定していいのか？ちなみにこれは，5%をどんな厳しい(=低い)確率αにしても同じことが言えるだろう．」
+
+これは論理的に正しいため，これ自体の誤りを指摘することはできない．しかし，現実に意思決定する上では何かが確実に分かることはありえない．私たちは常に間違っている可能性があるのだ．既に見たように，サンプルから効果を推定するときには誤差が必ずあった．この問題に対して，完全に正しい値を求めるのではなく，誤差を定量的に把握することで対応したのだった．この場合も同じように考えてみることにしよう．
+
+この回答では，まずp=1/2を仮定した．この仮定を帰無仮説と呼び，H0で表すことにする．帰無仮説という呼び名の由来は後で説明する．最後にp≠1/2を結論づけた．これを対立仮説とよび，H1で表すことにする．
+
+このとき，真実と結論の関係は次のように2*2の表で整理でき，反論Bは星の可能性を指摘していると考えられる．
+
+つまり，真実がH0なのに，たまたま極端な場合が起こって，それをもとにH0を否定(一般的には棄却という)し，H1を結論づけてしまう場合だ．このような誤りを犯す確率は，たまたま極端な場合が起こる確率に等しいので，その確率はαとなる．一方，真実をうまく反映した結論になるのは，1と2の場合だ．
+
+1の場合は，最初の回答が正しかった場合で，実際に公平でないコインことを正しく見抜きH1を結論づけた場合である．
+
+2の場合は，コインが本当に公平だった場合に，H0を棄却しなかった場合である．ここで注意すべきは，H0を結論づけるわけではないということだ．これについては，実は先程述べたことと同じになるのだが，もう一度説明しよう．例えば，コインを8回投げて4回オモテがでれば，直観的にも確率的にも公平なコインであることは否定はできないだろう．しかし，だからといって，p=1/2を結論づけることはできない．というのも，p=0.4とか，p=0.6とかであれば，4回オモテになることは十分ありえるからだ．もっと一般にはpは1/2周辺ならどの値もあり得るわけで，p=1/2だけが正しいと結論づけることはできない．だから，2の場合には，H0を棄却しない=「p=1/2の可能性を否定しない」ことができる精一杯のことであり，「p=1/2である」ということはできない．
+
+では最後の欄は何だろうか．これは，本当はp=1/2ではないのに，それを否定しない場合である．例えば，公平でないのに，公平なコインだと思ってプレイしている場合がこれに当てはまる．実際，反論Bを不用意に受け入れれば，この誤りをする可能性が高い．つまり「確かに全てオモテになるのは0.4%と可能性は低いけれど，まだp=1/2は否定できないね」とするのは論理的に間違いではないかもしれないが，p=1/2でない可能性はかなり高く，この誤りをする危険も高い．
+
+こうして，私たちの判断には2パターンの誤り方があることがわかる．
+
+1つはH0が真なのに，H0を棄却してH1を結論づけることで，これは第一種の誤りと呼ばれる．この誤りをする確率はαだった．
+もう1つはH0が偽なのに，H0を棄却しないことで，これは第二種の誤りと呼ばれる．この誤りをする確率をβで表す．
+
+これを再び2*2の表で表すと次の通りになる．
+
+
+第一種の誤りについてはαだけ間違う可能性があることを定量的に評価できている．では第二種の誤りを犯す可能性は今回どれだけあるのか．これを厳密に評価することは高度な数学を要するので難しいが，図で理解してみよう．
+
+
+ということはβとαと試行回数n，そして本当のpの値の1/2からのずれの関係は次の通り．
+
+- αを小さくするほどβは大きくなる
+- nを大きくするほどβは小さくなる
+- ズレが大きいほどβが小さくなる
+
+## 薬の効果に当てはめてみる
+
+薬の効果も仮説検定的に調べてみることができる．前回までは$μ^D-μ^P$の区間推定を行ったが，仮説検定的に，$μ^D-μ^P$を調べてみると次のようになる．
+
+帰無仮説H0 : $μ^D=μ^P$
+対立仮説H1 : $μ^D > μ^P$
+
+このように設定する理由を理解しよう．まず仮説検定では$μ^D-μ^P$が特定の値になることを示すことは困難である．これはコイン投げの例でp=p1を仮説検定で示せなかったのと同じ理由による．なので，帰無仮説として最も望ましくない結果を仮定して，それを否定することを目標とすることになる．(これが帰無というネガティブ系な名前の由来)今回の最も望ましくない結果は$μ^D=μ^P$なので，これを仮定して否定することを目指す．対立仮説が$μ^D ≠ μ^P$ではなく$μ^D > μ^P$なのは，$μ^D$の方が大きいことを示せないと，薬の効果があったとは言えないからだ．
+
+これを検証するためには，コイン投げと同じように考える．コイン投げのときは極端な場合とは帰無仮説が真実のときに生じる可能性が5%以下であるような平均から外れた両端だった．薬の効果の場合には極端な場合とは，帰無仮説が真実のときに，生じる可能性が5%以下であるほど$μ^D - μ^P$が大きくなる場合だと考えられる．実際にやってみよう．
+
+まず，薬の効果については，
+$$
+t=\frac  { (\overline{X} - \overline{Y})  - (\mu^D -\mu^P) } {\sqrt{U_e(\frac{1}{m}+\frac{1}{n})}}
+$$
+
+
+が成り立ちました．詳しくは前回のここを見てください．帰無仮説より，$\mu^D -\mu^P=0$なので，
+$$
+t=\frac  { (\overline{X} - \overline{Y})  } {\sqrt{U_e(\frac{1}{m}+\frac{1}{n})}}
+$$
+と変形できる．この値tはサンプルから計算可能．実際に，
+
+$\overline{X}=m^D,\overline{Y} = m^P,U_X=S_D^2,U_Y = S_P^2,m=50,n=50$そしてtは自由度(m+n-2)のt分布に従うので，tの値が
+
+## なぜ使うべきではないか？
+
+
+## 仮説検定の意義はなにか？
+
+
+
+## 一般的な意思決定について
+
+\\(\theta \in\Theta_0\\)のときは行動Aを行う
+\\(\theta \in\Theta_0^c\\)のときは行動Aを行わない
+
+母パラメータ\\(\theta\\)で規定される確率分布から生成されるサンプルデータ\\(X_k\\)から計算されるXについての棄却域をRとして，
+\\(\beta(\theta) = P_{\theta}(X \in R ) \\)とすると，
+\\(\beta(\theta)　\theta \in\Theta_0\\)が第一種の誤りで，
+\\(1 - \beta(\theta)　\theta \in\Theta_0^c\\)が第二種の誤り．
+
+\\( \beta(\theta) =\begin{cases} 0 & (\theta \in\Theta_0) \\\\ 1 & (\theta \in\Theta_0^c) \end{cases}\\)
+
+となることが理想的．だが，トレードオフなので，αの上限を定めたままβを最大化できれば，それが'良い'検定．
+そのときに，数学的に色々な定理があって(ネイマンピアソンの補題，カーリン・ルビンの定理)，今回の場合には，今回採用した方法が最も良い検定であることが証明されている．
+
+詳しくは　https://starpentagon.net/analytics/8_3_1_error_prob_power_function/ 
+
+
+α=0.05として考えてみよう．
+
+
+ここで，第一種の誤りを
+
+ここで反論Bに戻ろう．
+
+「p=1/2のときに8回投げて8回表になるのは，0.4%と確かに低いが，起きないわけではない．実際，p=1/2のコインでも投げ続ければ，8回連続でオモテになることはあるだろう．今回はたまたまそういうときだったのかもしれない．」
+
+というのは，「H0が真でも0.4%の確率でオモテは8回でる．H0が正しい場合に0.4%の確率で起こることが起きたとき，H0を棄却するのは正当なのか？」という問題提起である．
+
+
+
+第一種の誤りが0.4%，つまりα=0.004であることを表す主張に過ぎない．だからこれは反論というよりは事実の表明なのだ．
+
+
+例えば，オモテが7回でた場合を考えてみる．この確率は1/32である．この場合，
+
+
+
+
+例えば，p=0.01で全てオモテになる確率は0.00000001%と確かに低いが，それでもゼロではないから，たとえ，p=0.01であっても
+次に問題になるのは，十分に小さいとはどのくらいなのかということだ．
+
+
+
+
+
+
+## 紅茶の違いのわかる婦人
+
+ミルクティーを作るときに，ミルクとお茶を最初にどちらに入れたかを，できたミルクティーを飲むだけで判別できるという貴婦人Aがいる．この主張を確かめるために，8杯のミルクティーを用意して，半分はミルクを先に入れたもの，半分はお茶を先に入れたものとした．それらを彼女に飲んでもらい，ミルクを先に入れたと思う4杯を選んでもらった．すると，彼女が選んだ4杯は本当にミルクを先に入れたものだった．つまり彼女は完全に正解したのだ．このとき，彼女の主張は確かめられたと言えるだろうか？
+
+もし，貴婦人の主張が正しいのなら，彼女はミルクを先に入れたミルクティー(先ミルクと呼ぶ)を飲んだときに，それが先ミルクだと当てる確率pと，お茶を先に入れたミルクティー(先お茶と呼ぶ)を飲んだときに，それが先ミルクだと当てる確率qは，ともに十分に1に近いことになる．1だと言い切らないのは，100%正解する必要はないからだ．例えば，足し算ができる人がいて，その人に足し算をしてもらうと，(計算ミスとか考え違いとかのせいで)100%正確に計算するわけではないだろうが，それでも正答率が100%に近ければ，足し算ができることを疑わないだろう．
+
+これについてフィッシャーは次のように回答した．
+
+もし，彼女が判別する能力をもっていないとする．すると彼女は8杯のうち4杯をでたらめに選ぶことになる．この場合，8杯から4杯を選ぶには，${}_8 \mathrm{ C }_4$通りの方法がある．そして，選んだ4杯のうち，ミルク先がn個含まれる(n=0,1,2,3,4)場合の数はそれぞれ，
+
+
+で与えられる．以上から，でたらめに選んでn=4となる確率は で十分に小さいので，彼女は判別能力があると考えられる．
+
+この回答について詳しく見ていこう．まず一行目，
+
+*もし，彼女が判別する能力をもっていないとする．*
+
+能力をもっていないとは，あるミルクティーが先にミルクが入れられたものなのか，お茶が入れられたものなのかが分からない，ということだ．だから，先ミルクのミルクティーを飲んだときに，でたらめに先ミルクとか，先お茶ということになるので，それを正しく先ミルクだと当てられる確率が1/2となる．もちろん，先お茶のミルクティーを飲んだときにも，それを正しく先お茶だと当てられる確率も1/2となる．だから，8杯から4杯先ミルクを選べ，と言われてもでたらめに選ぶしかない．
+
+このような仮定からはじめて最終的には，
+
+*確率は で十分に小さいので，彼女は判別能力があると考えられる．*
+
+と結論づける．これは背理法である．最初の仮定を否定するから，結論は，「先ミルクのミルクティーを飲んだときに，それを正しく先ミルクだと当てられる確率が1/2ではない．」ということになる．
+
+途中の論理は置いておいて，まずなぜ背理法を使うのかを考えてみよう．
+
+## なぜ背理法を使うのだろうか？
+
+貴婦人Qについて直観的に示したいことは，Pが1に
+
+
+
+
+
+
+
+Dr.Kはある粒子Qの存在を証明しようとしています．この粒子Qは直接目で見ることはできないのですが，以下のことが知られていました．
+
+- 粒子Qがないところでは，放射線Zqが観測される量xはN(10,1)に従う．
+- 粒子Qがあるところでは，放射線Zqが観測される量xはそれよりも大きくなる．
+
+そこでDr.KはZqを計測する機械を発明し，色々なところで計測したところ，富士山の山頂でZqの計測値が次のようになっていることを発見しました．
+
+
+
+
+
+前回までで薬の効果を求めることができましたが，もう一度意思決定と結びつけて考えてみましょう．
+
+まずDr.K,H,Mをあわせた実験の結果からだけでは判断ができなかったのは，95%区間の幅が広かったからです．
+一方，3人を合わせた結果からは95%区間は最低でも0.6cmをこえており，十分に身長を伸ばす効果があるだろうと判断して薬を使用することにしたのでした．
+
+では，
+
+https://www.jpma.or.jp/information/evaluation/symposium/lofurc0000009vol-att/20180123_03.pdf
+
+https://en.wikipedia.org/wiki/Permutation_test?useskin=vector
+https://en.wikipedia.org/wiki/Lady_tasting_tea?useskin=vector
+
+
+2000人までサンプルを増やした結果を見て，薬を使うことに決めた．このとき，何を
 
 Dr
 
@@ -27,19 +241,3 @@ Dr
 ノイズ μ=0
 ノイズでない　μ≠0
 
-## 一般的な意思決定について
-
-\\(\theta \in\Theta_0\\)のときは行動Aを行う
-\\(\theta \in\Theta_0^c\\)のときは行動Aを行わない
-
-母パラメータ\\(\theta\\)で規定される確率分布から生成されるサンプルデータ\\(X_k\\)から計算されるXについての棄却域をRとして，
-\\(\beta(\theta) = P_{\theta}(X \in R ) \\)とすると，
-\\(\beta(\theta)　\theta \in\Theta_0\\)が第一種の誤りで，
-\\(1 - \beta(\theta)　\theta \in\Theta_0^c\\)が第二種の誤り．
-
-\\( \beta(\theta) =\begin{cases} 0 & (\theta \in\Theta_0) \\\\ 1 & (\theta \in\Theta_0^c) \end{cases}\\)
-
-となることが理想的．だが，トレードオフなので，αの上限を定めたままβを最大化できれば，それが'良い'検定．
-そのときに，数学的に色々な定理があって(ネイマンピアソンの補題，カーリン・ルビンの定理)，今回の場合には，今回採用した方法が最も良い検定であることが証明されている．
-
-詳しくは　https://starpentagon.net/analytics/8_3_1_error_prob_power_function/ 
