デザインを整えた

--- a/src/guide/statistics/1.md
+++ b/src/guide/statistics/1.md
@@ -7,7 +7,7 @@ order: 1
 ---
 
 
-# 統計1 個人への介入の効果を知る確実な方法と，その困難
+# 1.個人への介入の効果を知る確実な方法・その困難{.text-2xl .font-bold}
 
 ## 1.1 <small>このシリーズの目標</small>
 
