--- a/src/guide/statistics/2.md
+++ b/src/guide/statistics/2.md
@@ -5,7 +5,7 @@ title: 集団への介入の効果を知る方法・その困難
 order: 2
 ---
 
-# 統計2 集団への介入の効果を知る方法と，その困難
+# 2.集団への介入の効果を知る方法・その困難{.text-2xl .font-bold}
 
 ## 2.1 <small>Dr.Kの実験結果</small>
 
