--- a/src/guide/statistics/8.md
+++ b/src/guide/statistics/8.md
@@ -1,11 +1,11 @@
 ---
 layout: layouts/guide.njk
-title: ランダムサンプル，サンプルサイズ，誤差
-order : 4
+title: 母分散未知の場合の母平均の推定
+order : 9
 tags: stat
 ---
 
-# 8. σ未知の場合の母平均の推定
+# 8. σ未知の場合の母平均の推定{.text-2xl .font-bold}
 
 ## 8.1
 
@@ -15,6 +15,7 @@ tags: stat
 
 $$ P(\overline{X} - 1.96\frac{\sigma}{\sqrt N} \leqq \mu  \leqq \overline{X} + 1.96\frac{\sigma}{\sqrt N}) = 0.95$$ 
 
+</div>
 としても，σが未知のため，$\mu $の範囲を求めることはできません．
 
 そこで，$z=\frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}}$の$\sigma^2$を不偏分散$U^2$に置き換えた変数$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$が，tは自由度(N-1)のt分布に従うことを使います．このことを，$t \sim t(N-1) $と表します．
@@ -36,15 +37,16 @@ t分布について次のことが成り立ちます．
 - そしてνを大きくするほど，t分布は標準正規分布に近づく．つまり，
 - t分布の平均μは0であり，
 - νを大きくするほどt分布の標準偏差σは1に近づく．
+{.pt-4}
 
 これは次のように考えると納得できます．
 
 - $E[U^2]=σ^2$より，サンプル数が十分大きければ，$U^2 = σ^2$と見なせる．
-
 - $t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$は$z=\frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}}$に含まれる母分散$\sigma^2$を不偏分散$U^2$に置き換えたものである．
 - よって，サンプル数Nが十分大きければ，t=z．つまり，tとzは同じ分布となる．
 - 以上から，t~t(N-1)より，サンプル数Nが十分大きいとき，t(N-1)は標準正規分布N(0,1)に近づかなければならない．
 - よって，t(ν)はνが大きいとき標準正規分布と一致する．
+{.pt-4}
 
 ## 8.2 <small>自由度について</small>
 
@@ -182,8 +184,10 @@ $$
 
 まず，薬群とプラセボ群はN人ずつになります．8.Yの記号をこの例に当てはめると，
 
-$\overline{X}=m^D,\overline{Y}=m^P,m=N,n=N,\mu_1=\mu^D,\mu_2=\mu^P$
+<div class="max-xl:w-full max-xl:overflow-x-scroll">
 
+$\overline{X}=m^D,\overline{Y}=m^P,m=N,n=N,\mu_1=\mu^D,\mu_2=\mu^P$
+</div>
 となります．とりあえずこれを代入してtを表してみます．
 
 $$t=\frac  { (m^D - m^P )  - (\mu^D -\mu^P) } {\sqrt{U_e^2(\frac{1}{N}+\frac{1}{N})}}$$
@@ -210,12 +214,18 @@ $$P(-1.96 \leqq t \leqq 1.96) = 0.95$$
 
 これに，tを代入して
 
+<div class="max-xl:w-full max-xl:overflow-x-scroll">
 $$P(-1.96 \leqq \frac  { (m^D - m^P )  - (\mu^D -\mu^P) } {\sqrt{U^2(\frac{2}{N})}} \leqq 1.96) = 0.95$$
+</div>
 
 これを整理して，
+
+<div class="max-xl:w-full max-xl:overflow-x-scroll">
 $$
 P( m^D - m^P -1.96\sqrt{U^2(\frac{2}{N})} \leqq \mu^D -\mu^P \leqq  m^D - m^P+1.96\sqrt{U^2(\frac{2}{N})}) = 0.95
 $$
+</div>
+
 となります．サンプル平均からの誤差は$1.96\sqrt{U^2(\frac{2}{N})}$となるので，これをどれくらいに抑えたいのかによってサンプルサイズが決まります．
 
 - 子供Lに対する結果からは$\mu^D -\mu^P$は少なくとも+1cmはあると予想した
