AAやる夫で試してみる

--- a/src/guide/statistics/1.md
+++ b/src/guide/statistics/1.md
@@ -1,13 +1,13 @@
 ---
 layout: layouts/guide.njk
-next : /guide/statistics/2
 tags: stat
+next : /guide/statistics/2
+previous : /
 title: 個人への介入の効果を知る確実な方法・その困難
 order: 1
 ---
 
-
-# 1.個人への介入の効果を知る確実な方法・その困難{.text-2xl .font-bold}
+# 1.個人への介入 の効果を知る確実な方法・その困難{.text-2xl .font-bold}
 
 ## 1.1 <small>このシリーズの目標</small>
 
@@ -172,4 +172,14 @@ Dr.Kには今日5歳になった子供Lがいます．ちょうどこの日，Dr
 これらの**完全に確実な方法**の欠点は，それが実現不可能だということです．人間をコピーすることはできないし，時間を巻き戻すこともできないからです．しかし，これが可能だとして話を進めてみましょう．
 
 
-<div class="text-sm leading-5 pt-3">時を戻せるので，15年実験したらLも20歳になっているから意味ないじゃんという反論は考えないことにします．</div>
+<pre style="font-size: 14px; line-height : 16px" class="pt-10 pb-4 w-full overflow-x-auto">
+       _.---._    /\\
+    ./'       "--`\//   時を戻せるので，
+  ./              o \   15年実験したらLも20歳になっているから意味ないじゃん，
+ /./\  )______   \__ \  という反論は考えないことにします．
+./  / /\ \   | \ \  \ \
+   / /  \ \  | |\ \  \7
+    "     "    "  "       
+</pre> 
+
+<div class="text-sm leading-5 pt-3"></div>
