--- a/src/guide/statistics/2.md
+++ b/src/guide/statistics/2.md
@@ -1,6 +1,8 @@
 ---
 layout: layouts/guide.njk
 tags: stat
+next : /guide/statistics/3
+previous : /guide/statistics/1
 title: 集団への介入の効果を知る方法・その困難
 order: 2
 ---
