--- a/src/guide/statistics/3.md
+++ b/src/guide/statistics/3.md
@@ -1,6 +1,8 @@
 ---
 layout: layouts/guide.njk
 tags: stat
+next : /guide/statistics/4
+previous : /guide/statistics/2
 title: 集団の同一性についての定義を修正し，2つの困難を解消する
 order: 3 
 ---
