--- a/src/guide/statistics/4.md
+++ b/src/guide/statistics/4.md
@@ -1,6 +1,8 @@
 ---
 layout: layouts/guide.njk
 tags: stat
+next : /guide/statistics/5
+previous : /guide/statistics/3
 title: ランダムサンプル，サンプルサイズ，誤差
 order : 4
 ---
