--- a/src/guide/statistics/5.md
+++ b/src/guide/statistics/5.md
@@ -1,8 +1,10 @@
 ---
 layout: layouts/guide.njk
+tags: stat
+next : /guide/statistics/6
+previous : /guide/statistics/4
 title: 身長の分布を正規分布で表す
 order : 5
-tags: stat
 ---
 
 # 5 身長の分布を正規分布で表す
