--- a/src/guide/statistics/6.md
+++ b/src/guide/statistics/6.md
@@ -3,6 +3,8 @@ layout: layouts/guide.njk
 title: 正規分布を理解し，分布に当てはめる
 order : 6
 tags: stat
+next : /guide/statistics/7
+previous : /guide/statistics/3
 ---
 
 # 6 正規分布を理解し，分布に当てはめる
