--- a/src/guide/statistics/7.md
+++ b/src/guide/statistics/7.md
@@ -3,6 +3,8 @@ layout: layouts/guide.njk
 title: 正規分布を理解し，分布に当てはめる
 order : 7
 tags: stat
+next : /guide/statistics/8
+previous : /guide/statistics/6
 ---
 
 # 7 正規分布を理解し，分布に当てはめる{.text-2xl .font-bold}
